--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-../target
+target
+log4j-test/target
 .idea
 *.log
 *.class
